# DocuGen-AI

./: README.md  pyproject.toml
docugen/: __init__.py  cli.py
docugen/api/: __init__.py  gemini_client.py
docugen/core/: __init__.py  parser.py  processor.py  scanner.py
docugen/templates/: __init__.py  default_readme.md.j2  engine.py
docugen/utils/: __init__.py  config_manager.py  logger.py
docugen_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_engine.py  test_gemini_client.py  test_parser.py  test_processor.py  test_scanner.py
